--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
 		<div class="wrapper">
 			<div class="content">
 				<header class="hero-section">
-					<img data-speed=".6" class="hero" src="img/hero.png" alt="Alt" />
+					<img data-speed=".4" class="hero" src="img/hero1.png" alt="Alt" />
 					<div class="container">
 						<div data-speed=".75" class="main-header">
-							<h1 class="main-title">creative scroll</h1>
+							<h1 class="main-title">Handmade</h1>
+							<p class="main-subtitle">With love</p>
 						</div>
 					</div>
 				</header>
@@ -35,25 +36,38 @@
 
 								<div class="text-block gallery__item">
 									<h2 class="text-block__h">
-										Creative floating scroll with amazing parallax effect
+										Handgemacht, speziell für Sie: Bestellen Sie personalisierte
+										Produkte!
 									</h2>
 									<p class="text-block__p">
-										Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-										do eiusmod tempor amount scrolling.
+										Einzigartigkeit und Qualität garantiert.
 									</p>
 								</div>
 
 								<img class="gallery__item" src="img/work/6.jpg" alt="Alt" />
+								<img class="gallery__item" src="img/work/7.jpg" alt="Alt" />
+								<div class="text-block gallery__item">
+									<h2 class="text-block__h">
+										Einzigartige Produkte mit Liebe: handgefertigt auf
+										Bestellung!
+									</h2>
+									<p class="text-block__p">
+										Wir werden Ihre Ideen mit besonderer Aufmerksamkeit und
+										Talent in die Realität umsetzen.
+									</p>
+								</div>
+								<img class="gallery__item" src="img/work/8.jpg" alt="Alt" />
+								<img class="gallery__item" src="img/work/9.jpg" alt="Alt" />
 							</div>
 
 							<div data-speed="1.1" class="gallery__right">
 								<div class="text-block gallery__item">
 									<h2 class="text-block__h">
-										Creative floating scroll with amazing parallax effect
+										Lassen Sie uns Träume wahr werden: Maßarbeit auf Bestellung!
 									</h2>
 									<p class="text-block__p">
-										Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-										do eiusmod tempor amount scrolling.
+										Unsere Handwerker schaffen etwas Einzigartiges, speziell für
+										Sie.
 									</p>
 								</div>
 
@@ -61,17 +75,42 @@
 								<img class="gallery__item" src="img/work/5.jpg" alt="Alt" />
 								<div class="text-block gallery__item">
 									<h2 class="text-block__h">
-										Creative floating scroll with amazing parallax effect
+										Besondere Geschenke mit Kunst: Bestellen Sie bei uns
+										handgefertigte Geschenke!
 									</h2>
 									<p class="text-block__p">
-										Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-										do eiusmod tempor amount scrolling.
+										Verschenken Sie Überraschung und Freude an Ihre Liebsten.
 									</p>
 								</div>
-								<img class="gallery__item" src="img/work/3.jpg" alt="Alt" />
+								<img class="gallery__item" src="img/work/10.jpg" alt="Alt" />
+								<img class="gallery__item" src="img/work/11.jpg" alt="Alt" />
+								<img class="gallery__item" src="img/work/12.jpg" alt="Alt" />
+								<img class="gallery__item" src="img/work/13.jpg" alt="Alt" />
+								<img class="gallery__item" src="img/work/14.jpg" alt="Alt" />
 							</div>
 						</main>
 					</div>
+				</section>
+
+				<section class="social-media">
+					<h2>
+						Sie können mit uns auf den folgenden Plattformen in Verbindung
+						kontaktieren
+					</h2>
+					<ul>
+						<li>
+							<a href="#"><img src="/img/svg/whatsapp.svg" alt="Alt" /></a>
+						</li>
+						<li>
+							<a href="#"><img src="/img/svg/tiktok.svg" alt="Alt" /></a>
+						</li>
+						<li>
+							<a href="#"><img src="/img/svg/instagram.svg" alt="Alt" /></a>
+						</li>
+						<li>
+							<a href="#"><img src="/img/svg/telegram.svg" alt="Alt" /></a>
+						</li>
+					</ul>
 				</section>
 			</div>
 		</div>
